--- a/index.html
+++ b/index.html
@@ -59,15 +59,14 @@ and Privacy Lab at IUB as a postdoctoral researcher.
 
 <p>
 My research interests span various topics in computer security and privacy including: <br>
-  (a) <a href="detection-systems.html"> Detecting and preventing malicious and abusive activities or content</a>, <br>
+  (a) <a href="detection-systems.html"> Detecting and preventing malicious and abusive activities and content</a>, <br>
   (b) <a href="develop-systems.html">Building secure and privacy preserving (social) systems</a>, <br>
   (c) <a href="privacy-big-data.html"> User and data privacy in the era of big data</a>, <br>
   (d) <a href="social-computing.html">Social computing</a>.  
   </p>
 <p>
-  In my research I have applied techniques from privacy enhancing technologies, 
-    computer networks including P2P networks and distributed systems,
-    applied cryptography, machine Learning, data mining and complex networks/network science. 
+  In my research I have applied techniques from privacy enhancing technologies, distributed systems,
+    peer-to-peer networks, applied cryptography, machine Learning, data mining, network science and data science. 
 </p>
 </section>
       <section>
