--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ and Privacy Lab at IUB as a postdoctoral researcher.
 <p>
 My research interests span various topics in computer security and privacy including: <br>
   (a) <a href="detection-systems.html"> Detecting and preventing malicious and abusive activities and content</a>, <br>
-  (b) <a href="develop-systems.html">Building secure and privacy preserving (social) systems</a>, <br>
+  (b) <a href="develop-systems.html">Developing secure and privacy preserving (social) systems</a>, <br>
   (c) <a href="privacy-big-data.html"> User and data privacy in the era of big data</a>, <br>
   (d) <a href="social-computing.html">Social computing</a>.  
   </p>
