--- a/detection-systems.html
+++ b/detection-systems.html
@@ -53,6 +53,9 @@ and analyzing the content of these messages. However, advanced attackers can sti
 		We also show that POISED's detection is more comprehensive than previous systems, by comparing it to three state-of-the-art spam detection systems that have been proposed by the research community in the past. POISED significantly outperforms each of these systems. 
 Moreover, through simulations, we show how POISED is effective in the early detection of spam messages and how it is resilient against two well-known adversarial machine learning attacks.
 		</p>
+		
+       <p> <img align="left" src="framework.pdf" width="165" height="178" hspace="20" vspace ="20"/> </p> <br style="clear:both" />
+       
 	<h4> Methods: </h4>
 	<p> Large-scale Twitter dataset, Network science, Natural language processing, Crowd-sourced a ground-truth dataset, 
 		Machine learning, Simulated possible adversarial machine learning attacks.</p>
