--- a/detection-systems.html
+++ b/detection-systems.html
@@ -40,7 +40,6 @@
 	<h4> Submitted </h4>
 	<p> Shirin Nilizadeh, Francois Labreche, Alireza Sedighian, Ali Zand, José Fernandez, Gianluca Stringhini, Christopher Kruegel, and Giovanni Vigna </p>
 
-		<p> <img align="left" src="framework.pdf"/> </p> <br style="clear:both" />
 		<p> Cybercriminals have found in online social networks a propitious medium to spread spam and malicious content. Existing techniques for detecting spam include predicting the trustworthiness of accounts 
 and analyzing the content of these messages. However, advanced attackers can still successfully evade these defenses. </p>
 		
@@ -50,12 +49,16 @@ and analyzing the content of these messages. However, advanced attackers can sti
 		Dissemination paths may emerge where some communities post similar messages, based on the interests of those communities. 
 		Spam and other malicious content, on the other hand, follow different spreading patterns.</p>
 
+		<p> <img align="left" src="example-comms-3.pdf"/> </p> <br style="clear:both" /> <br style="clear:both" />
+		
 	<p> In this paper, we follow this insight and present POISED, a system that leverages the differences in propagation between benign and malicious messages on social networks to identify spam and other unwanted content. 
 		We test our system on a dataset of 1.3M tweets collected from 64K users, and we show that our approach is effective in detecting malicious messages, reaching 91% precision and 93% recall on our dataset. 
 		We also show that POISED's detection is more comprehensive than previous systems, by comparing it to three state-of-the-art spam detection systems that have been proposed by the research community in the past. POISED significantly outperforms each of these systems. 
 Moreover, through simulations, we show how POISED is effective in the early detection of spam messages and how it is resilient against two well-known adversarial machine learning attacks.
 		</p>
        
+	<p> <img align="left" src="framework.pdf"/> </p> <br style="clear:both" /> <br style="clear:both" />
+		
 	<h4> Methods: </h4>
 	<p> Large-scale Twitter dataset, Network science, Natural language processing, Crowd-sourced a ground-truth dataset, 
 		Machine learning, Simulated possible adversarial machine learning attacks.</p>
