--- a/detection-systems.html
+++ b/detection-systems.html
@@ -14,12 +14,12 @@
 	<section>
 	<ul id="list-nav">
 	  <li><a href="#poised">POISED</a></li>
- 	  <li><a href="#onereview">oneReview</a></li>
+ 	 <!-- <li><a href="#onereview">oneReview</a></li> !-->
   	  <li><a href="#craigslist">Craigslist Scams</a></li>
         </ul>
 	</section> 
 
-	<section>
+	<!--<section>
 	<h3>
 	<font color="#990000"><a id="onereview" class="anchor" href="#onereview" aria-hidden="true"><span class="octicon octicon-link"></span></a>OneReview: Detecting Fake Reviews through Multiple Sources</font></h3>
 	<h4> Ongoing Project </h4>
@@ -33,7 +33,7 @@
 	<h4> Methods: </h4>
 		<p>Yelp data challenge, Web mining, Data mining, Business Matching, Change-point analysis, Anomaly detection.</p> 
 
- 	 </section>
+ 	 </section> !-->
 	<section>
 	<h3>
 	<font color="#990000"><a id="posied" class="anchor" href="#poised" aria-hidden="true"><span class="octicon octicon-link"></span></a>POISED: Spotting Twitter Spam Off the Beaten Paths</font></h3>
