--- a/develop-systems.html
+++ b/develop-systems.html
@@ -19,7 +19,7 @@
         </ul>
 	</section> 
 
-	<section>
+	<!--<section>
 	<h3>
 	<font color="#990000"><a id="street" class="anchor" href="#street" aria-hidden="true"><span class="octicon octicon-link"></span></a>Street Rep: A Privacy-Preserving Reputation Aggregation System</font></h3>
 	<h4> Ongoing Project </h4>
@@ -32,15 +32,12 @@ Existing systems that aggregate reputation scores unfortunately provide no guara
 <p>In this paper, we present Street Rep, a system for aggregating user reputation scores in a privacy-preserving
 manner. Street Rep makes it possible for users to provide their aggregated scores over multiple services without revealing their respective identities on each service. We
 detail our approach, and discuss its resiliency against different types of attacks. We also built a prototype implementation of Street Rep. Our evaluation demonstrates that Street Rep (a) performs efficiently and (b) practically scales to a large user base. </p>
- 	 </section>
+ 	 </section> -->
 	<section>
 	<h3>
 	<font color="#990000"><a id="cachet" class="anchor" href="#cachet" aria-hidden="true"><span class="octicon octicon-link"></span></a>Cachet: A Decentralized Architecture for Privacy Preserving Social Networking with Caching</font></h3>
 		<p>Shirin Nilizadeh, Sonia Jahid, Prateek Mittal, Nikita Borisov, and Apu Kapadia</p>
 		<p> In Proceedings of 8th ACM International Conference on emerging Networking EXperiments and Technologies (ACM CoNEXT), Nice, France, Dec. 2012.  </p>
-	<h3> <font color="#990000">DECENT: A Decentralized Architecture for Enforcing Privacy in Online Social Networks </font></h3>
-		<p> The 4th IEEE International Workshop on Security and Social Networking (SESOC '12), Lugano, Switzerland, Mar 19, 2012.</p>
-	
 		<p>Online social networks (OSNs) such as Facebook and Google+ have transformed the way our society communi- cates. 
 			However, this success has come at the cost of user privacy; in today’s OSNs, users are not in control of their own data, and depend on OSN operators to enforce access control policies. 
 			A multitude of privacy breaches has spurred research into privacy-preserving alternatives for social net- working, exploring a number of techniques for storing, disseminating, and controlling access to data in a decentralized fashion. 
@@ -60,6 +57,18 @@ detail our approach, and discuss its resiliency against different types of attac
 		<p>Peer-to-peer social network, Data privacy and security: confidentiality, integrity and security, Distributed hash tables: FreePastry simulator, Applied crypto: Attribute-based access control and public-key crypto, Algorithm.</p>
 
 	</section>
+	    <section>
+		    <h3> <font color="#990000">DECENT: A Decentralized Architecture for Enforcing Privacy in Online Social Networks </font></h3>
+		<p> The 4th IEEE International Workshop on Security and Social Networking (SESOC '12), Lugano, Switzerland, Mar 19, 2012.</p>
+		    <p>A multitude of privacy breaches, both accidental and malicious, have prompted users to distrust centralized providers of online social networks (OSNs) and investigate decentralized solutions. 
+			    We examine the design of a fully decen- tralized (peer-to-peer) OSN, with a special focus on privacy and security. 
+			    In particular, we wish to protect the confidentiality, integrity, and availability of user content and the privacy of user relationships. 
+		    </p>
+			  <p>  We propose DECENT, an architecture for OSNs that uses a distributed hash table to store user data, and features cryptographic protections for confidentiality and integrity, as well as support for flexible attribute policies and fast revocation. 
+				  DECENT ensures that neither data nor social relationships are visible to unauthorized users and provides availability through replication and authentication of updates. 
+				  We evaluate DECENT through simulation and experiments on the PlanetLab network and show that DECENT is able to replicate the main functionality of current centralized OSNs with manageable overhead.
+		    </p>
+	    </section>
 
 	<section>
 	<h3>
