--- a/social-computing.html
+++ b/social-computing.html
@@ -36,12 +36,12 @@
 		
 
  	 </section>
-	<section>
+	<!--<section>
 	<h3>
 	<font color="#990000"><a id="hate" class="anchor" href="#hate" aria-hidden="true"><span class="octicon octicon-link"></span></a> Analyzing Propagation of Hate Speech on Twitter </font></h3>
 	<h4> Ongoing </h4>
 	
-	</section>
+	</section>-->
 
       <footer>
         
