--- a/develop-systems.html
+++ b/develop-systems.html
@@ -64,6 +64,7 @@ detail our approach, and discuss its resiliency against different types of attac
 			    We examine the design of a fully decen- tralized (peer-to-peer) OSN, with a special focus on privacy and security. 
 			    In particular, we wish to protect the confidentiality, integrity, and availability of user content and the privacy of user relationships. 
 		    </p>
+		    <p> <img align="left" src="ppts/objects.pdf" width="350" height="250" hspace="50"/> </p> <br style="clear:both" /> <br style="clear:both" />
 			  <p>  We propose DECENT, an architecture for OSNs that uses a distributed hash table to store user data, and features cryptographic protections for confidentiality and integrity, as well as support for flexible attribute policies and fast revocation. 
 				  DECENT ensures that neither data nor social relationships are visible to unauthorized users and provides availability through replication and authentication of updates. 
 				  We evaluate DECENT through simulation and experiments on the PlanetLab network and show that DECENT is able to replicate the main functionality of current centralized OSNs with manageable overhead.
@@ -79,9 +80,11 @@ detail our approach, and discuss its resiliency against different types of attac
 			Centralized systems that broker such queries and answers, however, do not provide adequate privacy. 
 			The success of these systems will be limited since users may avoid asking or answering questions related to sensitive topics such as health, political activism, or even innocuous questions which may make the querier seem ignorant.
 		</p>
+		<p> <img align="left" src="ppts/system-model2.pdf" width="350" height="250" hspace="50"/> </p> <br style="clear:both" /> <br style="clear:both" />
 		<p> Since social search systems leverage the structure of the social network to better match askers and answerers, standard ideas that hide this structure such as "connect to Aardvark via Tor" fall short.
 			Thus new techniques are needed to preserve the privacy of askers and answerers beyond the currently understood anonymity techniques. 
 			We explore the new and unique challenges for privacy, and propose Pythia, a decentralized architecture based on "controlled flooding" to enable privacy-enhanced social search that retains some degree of social network structure.</p>
+		<p> <img align="left" src="ppts/architecture.pdf" width="350" height="250" hspace="50"/> </p> <br style="clear:both" /> <br style="clear:both" />
 	<h4> Methods: </h4>
 		<p>Peer-to-peer question and answering system, User privacy and anonymity: expertise and interest unlinkability, Network Science: social communities, Privacy enhancing technologies: Onion routing, Anonymity set, and controlled flooding, Algorithms, and Simulations.</p>
 	</section>
