--- a/develop-systems.html
+++ b/develop-systems.html
@@ -13,8 +13,8 @@
     <div class="wrapper">
 	<section>
 	<ul id="list-nav">
-	  <li><a href="#street">Street Rep</a></li>
- 	  <li><a href="#cachet">Cachet</a></li>
+	  <li><a href="#cachet">Cachet</a></li>
+ 	  <li><a href="#decent">DECENT</a></li>
   	  <li><a href="#pythis">Pythia</a></li>
         </ul>
 	</section> 
@@ -58,7 +58,8 @@ detail our approach, and discuss its resiliency against different types of attac
 
 	</section>
 	    <section>
-		    <h3> <font color="#990000">DECENT: A Decentralized Architecture for Enforcing Privacy in Online Social Networks </font></h3>
+		    <h3> 
+			  <font color="#990000">  <a id="decent" class="anchor" href="#decent" aria-hidden="true"><span class="octicon octicon-link"></span></a>DECENT: A Decentralized Architecture for Enforcing Privacy in Online Social Networks</font>
 		<p> The 4th IEEE International Workshop on Security and Social Networking (SESOC '12), Lugano, Switzerland, Mar 19, 2012.</p>
 		    <p>A multitude of privacy breaches, both accidental and malicious, have prompted users to distrust centralized providers of online social networks (OSNs) and investigate decentralized solutions. 
 			    We examine the design of a fully decen- tralized (peer-to-peer) OSN, with a special focus on privacy and security. 
