--- a/develop-systems.html
+++ b/develop-systems.html
@@ -59,7 +59,7 @@ detail our approach, and discuss its resiliency against different types of attac
 	</section>
 	    <section>
 		    <h3> 
-			  <font color="#990000">  <a id="decent" class="anchor" href="#decent" aria-hidden="true"><span class="octicon octicon-link"></span></a>DECENT: A Decentralized Architecture for Enforcing Privacy in Online Social Networks</font>
+			  <font color="#990000">  <a id="decent" class="anchor" href="#decent" aria-hidden="true"><span class="octicon octicon-link"></span></a>DECENT: A Decentralized Architecture for Enforcing Privacy in Online Social Networks</font></h3>
 		<p> The 4th IEEE International Workshop on Security and Social Networking (SESOC '12), Lugano, Switzerland, Mar 19, 2012.</p>
 		    <p>A multitude of privacy breaches, both accidental and malicious, have prompted users to distrust centralized providers of online social networks (OSNs) and investigate decentralized solutions. 
 			    We examine the design of a fully decen- tralized (peer-to-peer) OSN, with a special focus on privacy and security. 
