--- a/privacy-big-data.html
+++ b/privacy-big-data.html
@@ -31,7 +31,7 @@ identities of users are removed from the social network graph.
 However, by using external information such as a reference social graph (from the same network or another network with similar users), 
 researchers have shown how such datasets can be de-anonymized. 
 These approaches use ‘network alignment’ techniques to map nodes from the reference graph into the anonymized graph and are often sensitive to larger network sizes, the number of seeds, and noise — which may be added to preserve privacy. </p>
-		<p> <img align="left" src="ppts/alg-h.pdf" hspace="50"/> </p> <br style="clear:both" /> <br style="clear:both" />
+		<p> <img align="left" src="ppts/alg-h.pdf" ></p> <br style="clear:both" /> <br style="clear:both" />
 
 <p>We propose a divide-and-conquer approach to strengthen the power of such algorithms. 
 Our approach partitions the networks into ‘communities’ and performs a two-stage mapping: first at the community level, and then for the entire network. 
