--- a/social-computing.html
+++ b/social-computing.html
@@ -31,7 +31,7 @@
   however, this tendency flips among the most visible users where being perceived as male is strongly associated with more visibility. 
   Our results suggest that gender presented in social media profiles likely frame interactions as well as perpetuates old inequalities online.
 	<p> <img align="left" src="ppts/followers-irr.pdf" width="250" height="200"/> <img align="left" src="ppts/retweets-irr.pdf" width="250" height="200"/> </p> <br style="clear:both" /> <br style="clear:both" />
-		<p> <img align="left" src="ppts/nilizadeh.pdf"/></p><br style="clear:both" /> <br style="clear:both" />
+		<p> <img align="left" src="ppts/nilizadeh.pdf" width="400" height="250" hspace="50"/></p><br style="clear:both" /> <br style="clear:both" />
 	
   <h4> Methods: </h4>
   <p>Data mining, Name-based and photo-based gender detection, Data Analysis: quartile regression, multivariate regression models such as poisson, linear, and negative binomial regression models. </p>
