--- a/social-computing.html
+++ b/social-computing.html
@@ -21,7 +21,7 @@
 	<section>
 	<h3>
 	<font color="#990000"><a id="glass" class="anchor" href="#glass" aria-hidden="true"><span class="octicon octicon-link"></span></a>Twitter's Glass Ceiling: The Effect of Perceived Gender on Online Visibility</font></h3>
-	<h4> Published </h4>
+	<p> In Proceedings of The International AAAI Conference on Web and Social Media (ICWSM '16), Cologne, Germany, May 17–20, 2016.  </p>
   <p> Shirin Nilizadeh, Anne Groggel, Peter Lista, Srijita Das, Yong-Yeol Ahn, Apu Kapadia, and Fabio Rojas </p>  
   Social media is a new public sphere where people can, in principle, communicate with each other regardless of their status. 
   However, social categories like gender may still bias online communication, replicating offline disparities. 
