--- a/social-computing.html
+++ b/social-computing.html
@@ -6,8 +6,8 @@
     <title>Social Computing</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <!--<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"> -->
+    <!--<link rel="stylesheet" href="stylesheets/github-light.css">-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"> 
   </head>
   <body>
     <div class="wrapper">
