--- a/social-computing.html
+++ b/social-computing.html
@@ -14,7 +14,7 @@
 	<section>
 	<ul id="list-nav">
 	  <li><a href="#glass">Twitter's Glass Ceiling</a></li>
- 	  <li><a href="#hate">Hate Speech</a></li>
+ 	  <li><a href="index">Home</a></li>
   </ul>
 	</section> 
 
