--- a/develop-systems.html
+++ b/develop-systems.html
@@ -16,6 +16,7 @@
 	  <li><a href="#cachet">Cachet</a></li>
  	  <li><a href="#decent">DECENT</a></li>
   	  <li><a href="#pythis">Pythia</a></li>
+	  <li><a href="index.html">Home</a></li>
         </ul>
 	</section> 
 
