--- a/detection-systems.html
+++ b/detection-systems.html
@@ -17,6 +17,7 @@
 	  <li><a href="#poised">POISED</a></li>
  	 <!-- <li><a href="#onereview">oneReview</a></li> !-->
   	  <li><a href="#craigslist">Craigslist Scams</a></li>
+	  <li><a href="index.html">Home</a></li>
         </ul>
 	</section> 
 
