--- a/privacy-big-data.html
+++ b/privacy-big-data.html
@@ -16,6 +16,7 @@
 	  <li><a href="#deAnon">deAnonymization</a></li>
  	  <li><a href="#revelations">Surveillance</a></li>
   	  <li><a href="#chilling">Chilling effect</a></li>
+	  <li><a href="index.html">Home</a></li>
         </ul>
 	</section> 
 
