--- a/index.html
+++ b/index.html
@@ -54,13 +54,12 @@ and Privacy Lab at IUB as a postdoctoral researcher.
     For my Ph.D. I received a two-year fellowship from the School of Informatics and Computing. 
     Following my doctorate and before joining the Seclab, I was a joint post-doctoral researcher at 
     the Center for Complex Networks and Systems Research (CNetS) and Privacy Lab at Indiana University.
-
   </p>    
 
 <p>
 My research interests span various topics in computer security and privacy including: <br>
   (a) <a href="detection-systems.html"> Detecting and preventing malicious and abusive activities and content</a>, <br>
-  (b) <a href="develop-systems.html">Developing secure and privacy preserving (social) systems</a>, <br>
+  (b) <a href="develop-systems.html"> Designing privacy-aware decentralized architectures for socially networked systems</a>, <br>
   (c) <a href="privacy-big-data.html"> User and data privacy in the era of big data</a>, <br>
   (d) <a href="social-computing.html">Social computing</a>.  
   </p>
