--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@ My research interests span various topics in computer security and privacy inclu
   (c) <a href="privacy-big-data.html"> User and data privacy in the era of big data</a>, <br>
   (d) <a href="social-computing.html">Social computing</a>.  
   </p>
-<p>
+  <p> Currently my research focuses on developing novel technologies for protecting user and data security and privacy in the areas of web 2.0 platforms, and Internet of Things. </p>
+<p> 
   In my research I have applied techniques from privacy enhancing technologies, distributed systems,
     peer-to-peer networks, applied cryptography, machine Learning, data mining, network science and data science. 
 </p>
