--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@ My research interests span various topics in computer security and privacy inclu
 </h3>
 
 <p>
+<strong>July 2017</strong>: Joint the program committee of <a href='http://ikt2017.aut.ac.ir/indexen.html'>IKT 2017</a><br> 
+<strong>July 2017</strong>: Received a scholarship to attend Grace Hopper Conference 2017 <br> 
 <strong>March 2017</strong>: Joint the program committee of PETS 2018 <br> 
 <strong>Jan 2017</strong>: Gave a talk on "Twitter's Glass Ceiling" at Network Science IGERT <br> 
 <strong>July 2016</strong>: Joint the shadow program committee of ASIACCS 2017 <br> 
