--- a/index.html
+++ b/index.html
@@ -75,15 +75,16 @@ My research interests span various topics in computer security and privacy inclu
 </h3>
 
 <p>
+  <strong>Feb 2016</strong>: Our paper "POISED: Spotting Twitter Spam Off the Beaten Paths" got accepted to ACM CCS 2017. <br>
 <strong>July 2017</strong>: Joint the program committee of <a href='http://ikt2017.aut.ac.ir/indexen.html'>IKT 2017</a><br> 
 <strong>July 2017</strong>: Received a scholarship to attend Grace Hopper Conference 2017 <br> 
 <strong>March 2017</strong>: Joint the program committee of PETS 2018 <br> 
 <strong>Jan 2017</strong>: Gave a talk on "Twitter's Glass Ceiling" at Network Science IGERT <br> 
 <strong>July 2016</strong>: Joint the shadow program committee of ASIACCS 2017 <br> 
-<strong>Apr 2016</strong>: Received an IEEE S&P travel award  <br>
+<!--<strong>Apr 2016</strong>: Received an IEEE S&P travel award  <br>
 <strong>Feb 2016</strong>: Joint the program committee of PETS 2017 <br>
 <strong>Feb 2016</strong>: Our paper "Twitter's Glass Ceiling: The Effect of Perceived Gender on Online Visibility" got accepted to ICWSM 2016. <br>
-<!--<strong>Aug 2015</strong>: Joint Seclab at UCSB <br>
+<strong>Aug 2015</strong>: Joint Seclab at UCSB <br>
 <strong>Jul 2015</strong>: Joint the program committee of WWW 2016 <br>
 <strong>Jul 2015</strong>: Joint the program committee of PETS 2016 <br>
 <strong>Jun 2015</strong>: Talked about "Twitter's Reaction on Revelations about Government's Internet Surveillance program" at SAT held with PETS 2015 <br>
