--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@ Islamic Azad University at Najafabad</p>
     <section>
 <h3>
 <font color="#990000"><a id="publications" class="anchor" href="#publications" aria-hidden="true"><span class="octicon octicon-link"></span></a>Publications</font></h3>
-<p> Shirin Nilizadeh, Anne Groggel, Peter Lista, Srijita Das, Yong-Yeol Ahn, Apu Kapadia, and Fabio Rojas,
+<p> Shirin Nilizadeh, Francois Labreche, Alireza Sedighian, Ali Zand, José Fernandez, Gianluca Stringhini, Christopher Kruegel, Giovanni Vigna, "POISED: Spotting Twitter Spam Off the Beaten Paths," In Proceedings of ACM Conference on Computer and Communications Security (CCS ’17), Texas, USA, 2017. </p>
+      <p> Shirin Nilizadeh, Anne Groggel, Peter Lista, Srijita Das, Yong-Yeol Ahn, Apu Kapadia, and Fabio Rojas,
 "<a href="papers/twitter-glass-ceiling-icwsm16.pdf">Twitter's Glass Ceiling: The Effect of Perceived Gender on Online Visibility</a>," In Proceedings of The International AAAI Conference on Web and Social Media (ICWSM '16),
 Cologne, Germany, May 17–20, 2016. (Acceptance rate: 17%) </p>
 <p>Shirin Nilizadeh, Apu Kapadia, and Yong-Yeol Ahn, "<a href="papers/nilizadeh-deanon-2014.pdf">Community-Enhanced De-anonymization of Online Social Networks</a>," In Proceedings of 21st ACM Conference on Computer and Communications Security (CCS ’14), Arizona, USA, 2014. (Acceptance rate: 19%) [<a href="bibs/deanon-ccs14.bib">bibtex</a>][<a href="ppts/deAnon-ccs-2014.pptx">Slides</a>] </p>
