--- a/index.html
+++ b/index.html
@@ -49,14 +49,27 @@ and Privacy Lab at IUB as a postdoctoral researcher.
 <font color="#990000"><a id="bio" class="anchor" href="#bio" aria-hidden="true"><span class="octicon octicon-link"></span></a>About Me</font>
 </h3>
   <p>
-    This is Shirin Nilizadeh, Postdoc in Seclab at UCSB, working with Prof. Christopher Kruegel and Prof. Giovanni Vigna. 
+  <!--  This is Shirin Nilizadeh, Postdoc in Seclab at UCSB, working with Prof. Christopher Kruegel and Prof. Giovanni Vigna. 
     I received my Ph.D. in Security Informatics from IUB under supervision of Prof. Apu Kapadia. 
     For my Ph.D. I received a two-year fellowship from the School of Informatics and Computing. 
     Following my doctorate and before joining the Seclab, I was a joint post-doctoral researcher at 
     the Center for Complex Networks and Systems Research (CNetS) and Privacy Lab at Indiana University.
+-->
+    This is Shirin Nilizadeh, Post-doctoral researcher in CyLab at Carnegie Mellon University, Silicon Valley, 
+    working with Prof. Corina Pasareanu. 
+    Before joining CyLab, I was a post-doctoral researcher in SecLab at UC, Santa Barbara (UCSB), advising by Christopher Kruegel and Prof. Giovanni Vigna. 
+    I received my Ph.D. in Security Informatics from Indiana University Bloomington (IUB) under supervision of Prof. Apu Kapadia. 
+    For my Ph.D. I received a two-year fellowship from the School of Informatics and Computing. 
+    Following my doctorate and before joining the Seclab, I was a joint post-doctoral researcher at 
+    the Center for Complex Networks and Systems Research (CNetS) and Privacy Lab at Indiana University working with Professor YY Ahn and Professor Apu Kapadia.
   </p>    
-
 <p>
+  My research focuses on security and privacy in the context of systems and social networks using techniques from machine learning and big data analytics. 
+  In particular, my research has two main aspects: 
+  (a) designing techniques and building systems to protect security and privacy of users and to give users more control over their data; and, 
+  (b) analyzing data to identify and characterize new security and privacy threats, and to capture insights and quantify aspects of human online behavior reacting to the existing threats. 
+  </p>
+<!--<p>
 My research interests span various topics in computer security and privacy including: <br>
   (a) <a href="detection-systems.html"> Detecting and preventing malicious and abusive activities and content</a>, <br>
   (b) <a href="develop-systems.html"> Designing privacy-aware decentralized architectures for socially networked systems</a>, <br>
@@ -68,6 +81,7 @@ My research interests span various topics in computer security and privacy inclu
   In my research I have applied techniques from privacy enhancing technologies, distributed systems,
     peer-to-peer networks, applied cryptography, machine Learning, data mining, network science and data science. 
 </p>
+-->
 </section>
       <section>
         <h3>
@@ -75,12 +89,15 @@ My research interests span various topics in computer security and privacy inclu
 </h3>
 
 <p>
-  <strong>July 2017</strong>: Our paper "POISED: Spotting Twitter Spam Off the Beaten Paths" got accepted to ACM CCS 2017. <br>
+<strong> Dec 2017 </strong>: Started a new post-doctroal position in CyLab, Carnegie Mellon University, Silicon Valley.
+<strong> Nov 2017 </strong>: Gave a talk on POISED at Amir Kabir University of Technology, Tehran, Iran.
+<strong> Nov 2017 </strong>: Gave a talk on POISED at ACM CCS 2017.
+<strong>July 2017</strong>: Our paper "POISED: Spotting Twitter Spam Off the Beaten Paths" got accepted to ACM CCS 2017. <br>
 <strong>July 2017</strong>: Joint the program committee of <a href='http://ikt2017.aut.ac.ir/indexen.html'>IKT 2017</a><br> 
 <strong>July 2017</strong>: Received a scholarship to attend Grace Hopper Conference 2017 <br> 
 <strong>March 2017</strong>: Joint the program committee of PETS 2018 <br> 
 <strong>Jan 2017</strong>: Gave a talk on "Twitter's Glass Ceiling" at Network Science IGERT <br> 
-<strong>July 2016</strong>: Joint the shadow program committee of ASIACCS 2017 <br> 
+<!--<strong>July 2016</strong>: Joint the shadow program committee of ASIACCS 2017 <br> 
 <!--<strong>Apr 2016</strong>: Received an IEEE S&P travel award  <br>
 <strong>Feb 2016</strong>: Joint the program committee of PETS 2017 <br>
 <strong>Feb 2016</strong>: Our paper "Twitter's Glass Ceiling: The Effect of Perceived Gender on Online Visibility" got accepted to ICWSM 2016. <br>
@@ -120,7 +137,8 @@ Islamic Azad University at Najafabad</p>
     <section>
 <h3>
 <font color="#990000"><a id="publications" class="anchor" href="#publications" aria-hidden="true"><span class="octicon octicon-link"></span></a>Publications</font></h3>
-<p> Shirin Nilizadeh, Francois Labreche, Alireza Sedighian, Ali Zand, José Fernandez, Gianluca Stringhini, Christopher Kruegel, Giovanni Vigna, "POISED: Spotting Twitter Spam Off the Beaten Paths," In Proceedings of ACM Conference on Computer and Communications Security (CCS ’17), Texas, USA, 2017. </p>
+<p> Shirin Nilizadeh, Francois Labreche, Alireza Sedighian, Ali Zand, José Fernandez, Gianluca Stringhini, Christopher Kruegel, Giovanni Vigna, 
+  "<a href="https://acmccs.github.io/papers/p1159-nilizadehAemb.pdf">POISED: Spotting Twitter Spam Off the Beaten Paths</a>," In Proceedings of ACM Conference on Computer and Communications Security (CCS ’17), Texas, USA, 2017. [<a href="bibs/poised-ccs17.bib">bibtex</a>][<a href="ppts/poised-ccs-2017.pptx">Slides</a>] </p>
       <p> Shirin Nilizadeh, Anne Groggel, Peter Lista, Srijita Das, Yong-Yeol Ahn, Apu Kapadia, and Fabio Rojas,
 "<a href="papers/twitter-glass-ceiling-icwsm16.pdf">Twitter's Glass Ceiling: The Effect of Perceived Gender on Online Visibility</a>," In Proceedings of The International AAAI Conference on Web and Social Media (ICWSM '16),
 Cologne, Germany, May 17–20, 2016. (Acceptance rate: 17%) </p>
