--- a/index.html
+++ b/index.html
@@ -22,9 +22,18 @@ and Privacy Lab at IUB as a postdoctoral researcher.
       <header>
        <p> <img align="left" src="DSC_0006_edited.JPG" width="165" height="178" hspace="20" vspace ="20"/> </p> <br style="clear:both" />
        <p> <h2><font color="#990000">Shirin Nilizadeh, Ph.D. </font></h2> 
-       <h3>Postdoctoral Researcher<br> </h3> </p>
+       <h3>Post-doctoral Researcher<br> </h3> </p>
         <p>
-        <h3><a href="https://seclab.cs.ucsb.edu">@SecLab</a> <br>
+       <h3><a href="https://www.cylab.cmu.edu">CyLab</a> <br>
+            <a href="https://www.ece.cmu.edu"> Electrical and Computer Engineering </a><br>
+            <a href="https://www.cmu.edu/silicon-valley/"> Carnegie Mellon University Silicon Valley </a> </h3>
+        </p>
+       <p style="color:black">
+        Email: nilizadeh&lt;at&gt;cs.ucsb.edu <br>
+        Office: Harold Frank Hall, Rm 2114 
+           </p>
+
+     <!--   <h3><a href="https://seclab.cs.ucsb.edu">@SecLab</a> <br>
             <a href="https://www.cs.ucsb.edu"> Computer Science Department </a><br>
             <a href="http://www.ucsb.edu"> UC at Santa Barbara </a> </h3>
         </p>
@@ -32,6 +41,7 @@ and Privacy Lab at IUB as a postdoctoral researcher.
         Email: nilizadeh&lt;at&gt;cs.ucsb.edu <br>
         Office: Harold Frank Hall, Rm 2114 
            </p>
+      -->
 
       </header>
 <section>
@@ -65,8 +75,9 @@ and Privacy Lab at IUB as a postdoctoral researcher.
   </p>    
 <p>
   My research focuses on security and privacy in the context of systems and social networks using techniques from machine learning and big data analytics. 
-  In particular, my research has two main aspects: 
+  In particular, my research has two main aspects: <br>
   (a) designing techniques and building systems to protect security and privacy of users and to give users more control over their data; and, 
+  <br> 
   (b) analyzing data to identify and characterize new security and privacy threats, and to capture insights and quantify aspects of human online behavior reacting to the existing threats. 
   </p>
 <!--<p>
@@ -89,9 +100,9 @@ My research interests span various topics in computer security and privacy inclu
 </h3>
 
 <p>
-<strong> Dec 2017 </strong>: Started a new post-doctroal position in CyLab, Carnegie Mellon University, Silicon Valley.
-<strong> Nov 2017 </strong>: Gave a talk on POISED at Amir Kabir University of Technology, Tehran, Iran.
-<strong> Nov 2017 </strong>: Gave a talk on POISED at ACM CCS 2017.
+<strong> Dec 2017 </strong>: Started a new post-doctroal position in CyLab, Carnegie Mellon University, Silicon Valley.<br>
+<strong> Nov 2017 </strong>: Gave a talk on POISED at Amir Kabir University of Technology, Tehran, Iran.<br>
+<strong> Nov 2017 </strong>: Gave a talk on POISED at ACM CCS 2017.<br>
 <strong>July 2017</strong>: Our paper "POISED: Spotting Twitter Spam Off the Beaten Paths" got accepted to ACM CCS 2017. <br>
 <strong>July 2017</strong>: Joint the program committee of <a href='http://ikt2017.aut.ac.ir/indexen.html'>IKT 2017</a><br> 
 <strong>July 2017</strong>: Received a scholarship to attend Grace Hopper Conference 2017 <br> 
@@ -138,7 +149,7 @@ Islamic Azad University at Najafabad</p>
 <h3>
 <font color="#990000"><a id="publications" class="anchor" href="#publications" aria-hidden="true"><span class="octicon octicon-link"></span></a>Publications</font></h3>
 <p> Shirin Nilizadeh, Francois Labreche, Alireza Sedighian, Ali Zand, José Fernandez, Gianluca Stringhini, Christopher Kruegel, Giovanni Vigna, 
-  "<a href="https://acmccs.github.io/papers/p1159-nilizadehAemb.pdf">POISED: Spotting Twitter Spam Off the Beaten Paths</a>," In Proceedings of ACM Conference on Computer and Communications Security (CCS ’17), Texas, USA, 2017. [<a href="bibs/poised-ccs17.bib">bibtex</a>][<a href="ppts/poised-ccs-2017.pptx">Slides</a>] </p>
+  "<a href="https://acmccs.github.io/papers/p1159-nilizadehAemb.pdf">POISED: Spotting Twitter Spam Off the Beaten Paths</a>," In Proceedings of ACM Conference on Computer and Communications Security (CCS ’17), Texas, USA, 2017. [<a href="bibs/poised-ccs17.bib">bibtex</a>][<a href="ppts/poised-ccs17.pptx">Slides</a>] </p>
       <p> Shirin Nilizadeh, Anne Groggel, Peter Lista, Srijita Das, Yong-Yeol Ahn, Apu Kapadia, and Fabio Rojas,
 "<a href="papers/twitter-glass-ceiling-icwsm16.pdf">Twitter's Glass Ceiling: The Effect of Perceived Gender on Online Visibility</a>," In Proceedings of The International AAAI Conference on Web and Social Media (ICWSM '16),
 Cologne, Germany, May 17–20, 2016. (Acceptance rate: 17%) </p>
