--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@ and Privacy Lab at IUB as a postdoctoral researcher.
             <a href="https://www.cmu.edu/silicon-valley/"> Carnegie Mellon University Silicon Valley </a> </h3>
         </p>
        <p style="color:black">
-        Email: nilizadeh&lt;at&gt;cs.ucsb.edu <br>
-        Office: Harold Frank Hall, Rm 2114 
+        Email: snilizad at andrew dot cmu dot edu<br>
+        Office: <br>
+         Carnegie Mellon University Silicon Valley Campus <br>
+         NASA Ames Research Park <br>
+         Building 19, room 1002
            </p>
 
      <!--   <h3><a href="https://seclab.cs.ucsb.edu">@SecLab</a> <br>
