--- a/index.html
+++ b/index.html
@@ -83,6 +83,14 @@ and Privacy Lab at IUB as a postdoctoral researcher.
   <br> 
   (b) analyzing data to identify and characterize new security and privacy threats, and to capture insights and quantify aspects of human online behavior reacting to the existing threats. 
   </p>
+  
+ <p>
+   I have served on program committees of the Privacy Enhancing Technologies Symposium (PETS) 2016-2018, ACM
+Asia Conference on Computer and Communications Security (ASIACCS) 2017, and World Wide Web Conference
+(WWW) 2016. I have also reviewed many journal papers submitted in Transactions on Information Forensics and
+Security, Transactions on Dependable and Secure Computing, Journal of Computer Science and Technology, and
+Human-centric Computing and Information Sciences.
+  </p>
 <!--<p>
 My research interests span various topics in computer security and privacy including: <br>
   (a) <a href="detection-systems.html"> Detecting and preventing malicious and abusive activities and content</a>, <br>
