--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@ and Privacy Lab at IUB as a postdoctoral researcher.
             <a href="https://www.cmu.edu/silicon-valley/"> Carnegie Mellon University Silicon Valley </a> </h3>
         </p>
        <p style="color:black">
-        Email: snilizad at andrew dot cmu dot edu<br>
+        Email: shirin dot nilizadeh at west dot cmu dot edu <br>
         Office: <br>
-         Carnegie Mellon University Silicon Valley Campus <br>
+         Carnegie Mellon University Silicon Valley <br>
          NASA Ames Research Park <br>
          Building 19, room 1002
            </p>
