--- a/index.html
+++ b/index.html
@@ -68,10 +68,11 @@ and Privacy Lab at IUB as a postdoctoral researcher.
     Following my doctorate and before joining the Seclab, I was a joint post-doctoral researcher at 
     the Center for Complex Networks and Systems Research (CNetS) and Privacy Lab at Indiana University.
 -->
-    This is Shirin Nilizadeh, Post-doctoral researcher in CyLab at Carnegie Mellon University, Silicon Valley, 
+    This is Shirin Nilizadeh, a Post-doctoral researcher in CyLab at Carnegie Mellon University, Silicon Valley, 
     working with Prof. Corina Pasareanu. 
-    Before joining CyLab, I was a post-doctoral researcher in SecLab at UC, Santa Barbara (UCSB), advising by Christopher Kruegel and Prof. Giovanni Vigna. 
-    I received my Ph.D. in Security Informatics from Indiana University Bloomington (IUB) under supervision of Prof. Apu Kapadia. 
+    Before joining CyLab, I was a post-doctoral researcher in SecLab at UC, Santa Barbara (UCSB), advised by 
+Christopher Kruegel and Prof. Giovanni Vigna. 
+    I received my Ph.D. in Security Informatics from Indiana University Bloomington (IUB) under the supervision of Prof. Apu Kapadia. 
     For my Ph.D. I received a two-year fellowship from the School of Informatics and Computing. 
     Following my doctorate and before joining the Seclab, I was a joint post-doctoral researcher at 
     the Center for Complex Networks and Systems Research (CNetS) and Privacy Lab at Indiana University working with Professor YY Ahn and Professor Apu Kapadia.
